Changes to some stylesheets

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
     <body>
         <div class="container">
         <header>
-            <div class="nav-left">
+            <div class="nav-left" id="outer">
             <h1 class="center"><a href="/">REBIS</a></h1>
             </div>
             <div class="nav-right">
