More style changes

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,11 +5,12 @@
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/bootstrap-theme.mon.css">
         <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400" rel="\stylesheet">
+        <link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
         <link rel="stylesheet" href="{% static 'css/base.css' %}">
     </head>
-    <body>
+    <body style="background-color:#F7F7F7;">
         <div class="container">
-        <header>
+        <header style="background-color:#83C49F;">
             <div class="nav-left" id="outer">
             <h1 class="center"><a href="/">REBIS</a></h1>
             </div>
