Added tips function and how to tell if there's a tip associated with a suggestion

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,12 +10,9 @@
     </head>
     <body style="background-color:#F7F7F7;">
         <div class="container">
-        <header style="background-color:#83C49F;">
+        <header style="background-color:#93EAB9;">
             <div class="nav-left" id="outer">
             <h1 class="center"><a href="/">REBIS</a></h1>
-            </div>
-            <div class="nav-right">
-            <a href="{% url 'post_new' %}">Give a new suggestion here</a>
             </div>
         </header>
             {% block content %}
