--- a/static/css/base.css
+++ b/static/css/base.css
@@ -72,3 +72,17 @@ header h1 a {
     width: 50%;
     float: left;
 }
+
+#rcorners {
+    border-radius: 25px;
+    border: 2px solid #D1D1D1;
+    padding: 20px;
+    width: 100%;
+}
+
+#rcorners2 {
+    border-radius: 25px;
+    border: 2px solid #DAA520;
+    padding: 20px;
+    width: 100%;
+}
