--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -7,4 +7,5 @@
     </div>
 
 <a href="{% url 'post_edit' post.pk %}">Edit suggestion</a>
+<a href="{% url 'tip' post.pk %}">Tip $5</a>
 {% endblock content %}
