--- a/templates/home.html
+++ b/templates/home.html
@@ -43,4 +43,8 @@
          </ul>
     {% endif %}
     {% endfor %}
+<div style="text-align:center;">
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3168.3700304266113!2d-122.0998116848565!3d37.428362479823925!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808fba17ac155555%3A0xa03eb788d0bd84a7!2sIntuit+Building+20!5e0!3m2!1sen!2sus!4v1541348497105" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+</div>
 {% endblock content %}
+
